<resources>
    <string name="app_name">LfL - Babybrei</string>
    <string name="first_human">Du beginnst.</string>
     <string name="turn_human">Du bist dran.</string>
  <string name="turn_computer">Bitte warte...</string>
    <string name="result_tie">Untentschieden!</string>
   <string name="result_human_wins">Du hast gewonnen und hast somit 5 Diamanten gewonnen.</string>
    <string name="result_android_wins">Du hast leider verloren.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
     <string name="five">5</string>
     <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
     <string name="nine">9</string>
    <string name="info">Info</string>
</resources>
